--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,26 +1,87 @@
-<div class="hero-unit">
-    <h1><?php echo sprintf($this->translate('Welcome to %sZend Framework 2%s'), '<span class="zf-green">', '</span>') ?></h1>
-    <p><?php echo sprintf($this->translate('Congratulations! You have successfully installed the %sZF2 Skeleton Application%s. You are currently running Zend Framework version %s. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.'), '<a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">', '</a>', \Zend\Version\Version::VERSION) ?></p>
-    <p><a class="btn btn-success btn-large" href="https://github.com/zendframework/zf2" target="_blank"><?php echo $this->translate('Fork Zend Framework 2 on GitHub') ?> &raquo;</a></p>
+<div class="jumbotron">
+  <div class="container">
+      <h2> <?php echo $this->translate('Consiga algo que precisa, doe ou peça emprestado'); ?> </h2>
+      <p>  <?php echo $this->translate('O'); ?> <b><?php echo $this->translate('Vizinhocas'); ?></b> 
+           <?php echo $this->translate('é um portal de trocas de bens, serviços e conhecimento entre vizinhos,
+                                        com o objetivo de promover o uso racional dos recursos do planeta bem como
+                                        realçar a convivialidade perdida em nossas vizinhanças'); ?>
+      </p>
+      <a class="btn btn-success btn-lg" role="button">Cadastre-se &raquo;</a>
+  </div>
 </div>
 
-<div class="row">
-
-    <div class="span4">
-        <h2><?php echo $this->translate('Follow Development') ?></h2>
-        <p><?php echo sprintf($this->translate('Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework website which provides links to the ZF2 %swiki%s, %sdev blog%s, %sissue tracker%s, and much more. This is a great resource for staying up to date with the latest developments!'), '<a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">', '</a>', '<a href="http://framework.zend.com/zf2/blog">', '</a>', '<a href="https://github.com/zendframework/zf2/issues">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://framework.zend.com/zf2" target="_blank"><?php echo $this->translate('ZF2 Development Portal') ?> &raquo;</a></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+          <h3 class="txt-green">Como Funciona</h3>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p><a class="btn btn-default" href="#" role="button">Saiba Mais &raquo;</a></p>
     </div>
-
-    <div class="span4">
-        <h2><?php echo $this->translate('Discover Modules') ?></h2>
-        <p><?php echo sprintf($this->translate('The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available %son GitHub%s. The site is currently live and currently contains a list of some of the modules already available for ZF2.'), '<a href="https://github.com/zendframework/modules.zendframework.com">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://modules.zendframework.com/" target="_blank"><?php echo $this->translate('Explore ZF2 Modules') ?> &raquo;</a></p>
-   </div>
-
-   <div class="span4">
-       <h2><?php echo $this->translate('Help &amp; Support') ?></h2>
-       <p><?php echo sprintf($this->translate('If you need any help or support while developing with ZF2, you may reach us via IRC: %s#zftalk on Freenode%s. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the %smailing lists%s.'), '<a href="irc://irc.freenode.net/zftalk">', '</a>', '<a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">', '</a>') ?></p>
-       <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
-   </div>
+    <div class="col-md-4">
+          <h3 class="txt-green">Cadastre-se</h3>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p class="txt-gray">.</p>
+          <p><a class="btn btn-default" href="#" role="button">Saiba Mais &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+          <h3 class="txt-green">Iniciativa</h3>
+          <p class="txt-gray">O Vizinhocas é um projeto idealizado e realizado pela Coolmeia</p>
+          <img src="/img/coolmeia-logo.png" />
+          <p></p>
+    </div>
+  </div>
 </div>
+
+<hr>
+
+
+
+<div class="actions clearfix">
+  <div class="btns">
+    <a class="btn submit" href="/admin/index/save" title="Criar Post">Criar Post</a>
+  </div>
+</div>  
+
+<label class="divisor"><span>Lista de Manifestações</span></label>
+<table class="datatable">
+  <thead>
+    <tr>
+      <th>Título</th>
+      <th>Texto</th>
+      <th width="130" class="center">Data de Cadastro</th>
+      <th width="120" class="center">Opções</th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php foreach($posts as $post):?>
+      <tr>
+        <td><?php echo $this->escapeHtml($post['title']);?></td>
+        <td><?php echo $this->escapeHtml($post['description']);?></td>
+        <td class="center">
+          <?php 
+            echo $this->dateFormat($post['post_date'], \IntlDateFormatter::SHORT, \IntlDateFormatter::SHORT, 'pt_BR');
+          ?>
+        </td>
+        <td class="center">
+          <a href="/admin/index/save/id/<?php echo $post['id'] ;?>" title="Editar" class="btn"><i class="icon-edit"></i></a>
+          <a href="/admin/index/delete/id/<?php echo $post['id'];?>" rel="confirmation" title="Deseja excluir este registro?" class="btn"><i class="icon-remove"></i></a>
+        </td>
+      </tr>
+    <?php endforeach;?>
+</table>
+<?php
+
+echo $this->paginationControl(
+      $manifest,
+      'Sliding',
+      'partials/paginator/control.phtml'
+);
+
+?>
